Fix the banner sub-menu shifting links when hover
Modify webShop.css:
- remove border bottom in the cart.php table head

Modify main.css:
- change the ul.sub-menu position to absolute

Change the loading loader

--- a/Allocacoc/public_html/css/main.css
+++ b/Allocacoc/public_html/css/main.css
@@ -176,7 +176,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .cart-dropdown ul.sub-menu {
-	position: relative;
+	position: absolute;
 	margin: 0;
 	left: 0;
 	background: #ffffff;
